--- a/storybook/style.css
+++ b/storybook/style.css
@@ -1,7 +1,12 @@
+body {
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+        'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
 .treeContainer {
-    width: 250px;
+    width: 200px;
     height: 400px;
     border: 1px solid #137cbd;
     box-sizing: border-box;
 }
-
