--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,11 @@
     align-self: center;
     display: inline-block;
     min-width: 20px;
+    max-width: 20px;
     min-height: 20px;
+    max-height: 20px;
     margin-left: 5px;
+    text-align: center;
 }
 
 .VTTree__NodeIcon--collapse,
