--- a/src/style.css
+++ b/src/style.css
@@ -3,19 +3,15 @@
     display: flex;
 }
 
-.VTTree__NodeIcon {
+.VTTree__NodeExpander {
     align-self: center;
     display: inline-block;
-    min-width: 20px;
-    max-width: 20px;
-    min-height: 20px;
-    max-height: 20px;
+    min-width: 16px;
+    max-width: 16px;
+    min-height: 16px;
+    max-height: 16px;
     margin-left: 5px;
     text-align: center;
-}
-
-.VTTree__NodeIcon--collapse,
-.VTTree__NodeIcon--expand {
     cursor: pointer;
 }
 
