--- a/storybook/style.css
+++ b/storybook/style.css
@@ -4,14 +4,14 @@ body {
         'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
-.column-container{
+.column-container {
     position: relative;
     margin-right: 20px;
-    border:1px solid black;
+    border: 1px solid black;
     padding: 20px;
 }
 
-.sourceCode{
+.sourceCode {
     position: absolute;
     top: 5px;
     right: 10px;
@@ -20,9 +20,8 @@ body {
     text-align: center;
     background-color: #e1e8ed;
     padding: 4px;
-    box-shadow: 1px 1px 2px #AAA;
-    border: 1px solid #AAAAAA;
-
+    box-shadow: 1px 1px 2px #aaa;
+    border: 1px solid #aaaaaa;
 }
 
 .treeContainer {
@@ -47,38 +46,34 @@ body {
     display: flex;
 }
 
-.style1 {
-    .treeNode {
-        background-color: rgba(0, 0, 0, 0);
-        transition: background-color 800ms;
-        &:hover {
-            background-color: #e1e8ed;
-            transition: background-color 200ms;
-        }
+.style1 .treeNode {
+    background-color: rgba(0, 0, 0, 0);
+    transition: background-color 800ms;
+}
+
+.style1 .treeNode:hover {
+    background-color: #e1e8ed;
+    transition: background-color 200ms;
+}
+
+.style2 .nodeIcon {
+    align-self: center;
+    display: inline-block;
+    min-width: 16px;
+    min-height: 16px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+@-webkit-keyframes rotating {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
     }
 }
 
-.style2{
-    .nodeIcon{
-        align-self: center;
-        display: inline-block;
-        min-width: 16px;
-        min-height: 16px;
-        margin-left: 5px;
-        cursor: pointer;
-    }
-
-    @-webkit-keyframes rotating {
-        from{
-            -webkit-transform: rotate(0deg);
-        }
-        to{
-            -webkit-transform: rotate(360deg);
-        }
-    }
-
-    .rotating {
-        -webkit-animation: rotating 2s linear infinite;
-    }
+.rotating {
+    -webkit-animation: rotating 2s linear infinite;
 }
-
